# GLES-NDK

./: README.md
JNITriangle/app/: CMakeLists.txt  build.gradle
JNITriangle/app/includes/: Shader.h
JNITriangle/app/src/androidTest/java/com/example/jnitriangle/: ExampleInstrumentedTest.java
JNITriangle/app/src/main/: AndroidManifest.xml
JNITriangle/app/src/main/assets/: fragmentShader.glsl  vertexShader.glsl
JNITriangle/app/src/main/cpp/: NativeBridge.cpp  RenderEngine.cpp  RenderEngine.h  gles_code.cpp  gles_code.cpp.cpp
JNITriangle/app/src/main/java/com/example/jnitriangle/: JNILib.java  JNITriangleActivity.java  JNITriangleRender.java  JNITriangleView.java
JNITriangle/app/src/main/res/values/: strings.xml
JNITriangle/app/src/test/java/com/example/jnitriangle/: ExampleUnitTest.java
JNITriangle/gradle/wrapper/: gradle-wrapper.properties
TextureBlend/app/: CMakeLists.txt  build.gradle
TextureBlend/app/includes/: Utility.h
TextureBlend/app/src/main/: AndroidManifest.xml
TextureBlend/app/src/main/assets/: fragmentShader.glsl  vertexShader.glsl
TextureBlend/app/src/main/cpp/: NativeBridge.cpp  RenderEngine.cpp  RenderEngine.h
TextureBlend/app/src/main/res/values/: strings.xml
TextureBlend/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/glesjniseries/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
